Update: index page change

--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
-<h1>Pangolin</h1>
-<h2>Intro</h2>
-<h2>Description</h2>
-<h2>Poaching</h2>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>My First Page</title>
+</head>
+
+<body>
+    <h1>Hello, World!</h1>
+    <p> Welcome!! This is my first web page!! </p>
+    <a href="raccoon.html">Raccoon</a>
+
+</body>
+
+</html>
