Update: index page change

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Hello, World!</h1>
     <p> Welcome!! This is my first web page!! </p>
     <a href="raccoon.html">Raccoon</a>
+    <img src="https://cdn.pixabay.com/photo/2014/04/02/14/06/raccoon-306184_1280.png">
 
 </body>
 
