--- a/raccoon.html
+++ b/raccoon.html
@@ -16,11 +16,12 @@
         산다. 천적은 퓨마, 재규어, 코요테, 늑대, 곰, 울버린, 대형 맹금류, 아메리카악어, 미시시피악어 등이다.
     </p>
     <hr>
-    <a href="http://google.com">Google</a>
+    <a href="index.html">home</a>
     <br>
     <a href="golden_retriever.html">Golden Retriever</a>
     <br>
     <a href="sea_otter.html">Sea otter</a>
+
     <hr>
     <h2>Breeds of raccoons</h2>
 
